# dal

./: api_data_processor.py  api_response.json  api_scraper.py  app.py  battle_history.json  battle_history_manager.py  check_bahia.py  check_data.py  check_guilds.py  data.json  data_processor.py  direct_scraper.py  encode_image.py  local_data_fetcher.py  logo_base64.txt  pyproject.toml  raw_battles_data.json  replit.nix  test_api.json  utils.py
assets/: icons.py  logo.py
attached_assets/: Pasted--div-style-position-absolute-top-0-left-0-width-5px-height-100-background-color--1743059070231.txt  Pasted--div-style-position-absolute-top-0-left-0-width-5px-height-100-background-color--1743059239052.txt  Pasted-Total-Battles-3-Active-Players-89-Battles-Won-3-Win-Rate-100-0-Overall-K-D-6-7-1743095063609.txt  Pasted-TypeError-Invalid-comparison-between-dtype-datetime64-ns-UTC-and-datetime-Traceback-File-hom-1743055748893.txt  Pasted-TypeError-Invalid-comparison-between-dtype-datetime64-ns-UTC-and-datetime-Traceback-File-hom-1743097320499.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-YAxis-titlefont-1743092923172.txt
components/: attendance_tracking.py  battle_details.py  comparison_tools.py  guild_overview.py  player_rankings.py
unused/: direct_data_fetcher.py  fixed_data_fetcher.py  mock_data.py  scraper.py  simple_fetcher.py
